data/css/welcome.css
/* ... */
.queue-card > .status {
  font-size: smaller;
  margin-top: 12px;
  color: #7F7F7F;
  float: right;
}

.queue-card > .status > .drop {
  float: right;
  color: black;
  margin-left: 16px;
  margin-right: 8px;
}

/* Card States */
.queue-card.success {
  border: 3px solid #008000;
}

.queue-card.failed {
  border: 3px solid #800000;
}

/* Card Labels */
.queue-card > .status > .success, .queue-plan.install {
  color: #008000 !important;
}

.queue-card > .status > .failed, .queue-plan.remove {
  color: #800000 !important;
}

/* Glow Queue button on add/remove */
@-webkit-keyframes queue-glow-add {
  0% { background-color: #3C3B37; color: #DED9CB; }
  40% { background-color: #A0CA5F; color: #A0CA5F; }
  60% { background-color: #A0CA5F; color: #A0CA5F; }
  100% { background-color: #3C3B37; color: #DED9CB; }
}

.queue-glow-add {
  -webkit-animation: queue-glow-add;
}

@-webkit-keyframes queue-glow-remove {
  0% { background-color: #3C3B37; color: #DED9CB; }
  40% { background-color: #CA645F; color: #CA645F; }
  60% { background-color: #CA645F; color: #CA645F; }
  100% { background-color: #3C3B37; color: #DED9CB; }
}

.queue-glow-remove {
  -webkit-animation: queue-glow-remove;
}

/* Animate program icons into the queue */
.queue-zoom-icon {
  position: absolute;
  top: 0px;
  right: 184px;
  width: 30px;
  height: 30px;
  z-index: 100;
  opacity: 0;
  pointer-events: none;
  -webkit-animation: queue-zoom-icon;
  -webkit-animation-duration: 1s;
  -webkit-animation-timing-function: ease-in-out;
}

@-webkit-keyframes queue-zoom-icon {
  0% {
    opacity: 0;
    -webkit-transform: scale3d(1, 1, 1);
  }
  50% {
    opacity: 1;
    -webkit-transform: scale3d(.8, .8, .8);
  }
  100% {
    opacity: 0;
    -webkit-transform: scale3d(.1, .1, .1);
  }
}

#navigation-queue-count {
  position: absolute;
  top: 20px;
  right: 177px;
  z-index: 100;
  display: inline-block;
  padding: 4px 4px;
  -webkit-border-radius: 8px;
  font-size: 11px;
  line-height: 8px;
  white-space: nowrap;
  vertical-align: baseline;
  background-color: #3C3B37;
  color: white;
}

#navigation-queue-count.empty {
  opacity: 0.6;
}

